--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Javascript</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +19,9 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="promise.js"></script>
-    <script src="object/object-method.js"></script>
+    <!-- <script src="promise.js"></script> -->
+    <!-- <script src="object/object-method.js"></script> -->
+    <!-- <script src="object/constructor-function.js"></script> -->
+    <!-- <script src="object/object-type.js"></script> -->
   </body>
 </html>
