--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <h1 class="text-primary text-center my-4">JS Promise</h1>
+    <h1 class="text-primary text-center my-4 text-uppercase">Javascript</h1>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -23,5 +23,6 @@
     <!-- <script src="object/object-method.js"></script> -->
     <!-- <script src="object/constructor-function.js"></script> -->
     <!-- <script src="object/object-type.js"></script> -->
+    <script src="object/prototype.js"></script>
   </body>
 </html>
