--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- <script src="object/object-method.js"></script> -->
     <!-- <script src="object/constructor-function.js"></script> -->
     <!-- <script src="object/object-type.js"></script> -->
-    <script src="object/prototype.js"></script>
+    <!-- <script src="object/prototype.js"></script> -->
+    <script src="object/this.js"></script>
   </body>
 </html>
