--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <!-- <script src="object/object-type.js"></script> -->
     <!-- <script src="object/prototype.js"></script> -->
     <!-- <script src="object/this.js"></script> -->
-    <script src="object/object-properties.js"></script>
+    <!-- <script src="object/object-properties.js"></script> -->
+    <script src="object/object-entries.js"></script>
   </body>
 </html>
