--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- <script src="object/prototype.js"></script> -->
     <!-- <script src="object/this.js"></script> -->
     <!-- <script src="object/object-properties.js"></script> -->
-    <script src="object/object-entries.js"></script>
+    <!-- <script src="object/object-entries.js"></script> -->
+    <!-- <script src="object/object-assign.js"></script> -->
   </body>
 </html>
