--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <!-- <script src="object/object-properties.js"></script> -->
     <!-- <script src="object/object-entries.js"></script> -->
     <!-- <script src="object/object-assign.js"></script> -->
+    <script src="object/factory-function.js"></script>
   </body>
 </html>
